<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity$PlaceholderFragment"
    >

    <EditText
        android:id="@+id/etExtra1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_extra_1"
        />

    <EditText
        android:id="@+id/etExtra2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_extra_2"
        />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        />

</LinearLayout>
